# tradingSystemX1

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  Dockerfile  Dockerfile-old-to-delete  Makefile  README.md  alembic.ini  api_health_20260311_215928.json  api_health_20260311_224853.json  api_health_20260312_083415.json  api_health_20260312_083917.json  api_health_20260312_112509.json  api_health_20260312_112813.json  api_health_20260312_113239.json  api_health_20260312_113439.json  api_health_check.py  backfill_embeddings.py  collect_errors.ps1  docker-compose.yml  finviz_nvda.html  pyproject.toml  requirements2.txt  test_finnhub_endpoints.py  test_finviz.py  test_fmp.py  test_fmp2.py  test_fmp3.py  test_fmp4.py  test_fmp5.py  test_fmp6.py  test_insider.py  test_pr.py  test_pr2.py  test_sec.py  test_simhash.py  test_uw.py  test_uw2.py
.claude/: settings.local.json
alembic/: env.py
app/: __init__.py  config-old.py  config.py  db.py  dlq.py  idempotency.py  idempotency_redis.py  kafka.py  known_tickers.py  logging.py  orm_models.py
config/: watchlist.txt
docs/: eodhd_evaluation.md  latency_queries.sql  telegram-alert-improvements.md
migrations/: 004_execution.sql  005_signal_log.sql  006_filter_columns.sql  007_core_tables.sql  008_technical_score.sql  009_stock_context.sql  010_event_dedup.sql  011_staleness.sql  012_fact_validation_audit.sql  013_signal_feature_log.sql  014_signal_log_catalyst_policy.sql  015_portfolio_risk_log.sql  016_execution_quality.sql  017_embedding_dedup.sql  018_fix_missing_columns.sql  019_pipeline_timestamps.sql
prometheus/: docker-compose.yml  prometheus.yml
scripts/: create_topics.sh  healthcheck.sh  init_postgres.sql
stock_context_service/: Dockerfile  __init__.py  classifier.py  main.py  models.py  polygon_client.py  redis_cache.py  scheduler.py
tests/: test_catalyst_policy.py  test_connectors.py  test_conviction_features.py  test_embedding_dedup.py  test_event_dedup.py  test_execution_safety.py  test_execution_upgrade.py  test_fact_cross_validator.py  test_fast_path.py  test_idempotency.py  test_llm_trust.py  (+6 more)
(+86 files in other folders)
